# kvm-mcp

./: .gitignore  QUICKSTART.md  README.md  env.example  pyproject.toml  rbac_users.example.json
.cursor/: mcp.json
.cursor/skills/kvm-vm-management/: SKILL.md
app/: config.py  dependencies.py  mcp_server.py
app/middleware/: __init__.py  rbac.py
app/models/: rbac.py  vm.py
app/services/: connection_manager.py  guest_agent_service.py  kvm_service.py  rbac_service.py
app/transport/: __init__.py  http.py
app/utils/: audit.py  rbac_auth.py  security.py  subprocess.py  tool_metrics.py
config/: hosts.yaml  hosts.yaml.example
scripts/: _mcp_bridge.py  rbac_admin.py  setup.sh  setup_remote_host.sh  setup_ssh_keys.sh  test_mcp.sh
skills/: claude-code-kvm-management.md  moltis-kvm-management.md
tests/: test_security_fixes.py  verify_fixes.sh
tests/test_mcp/: test_mcp_server.py
